# Remote-Buy-Online-Shopping-Platform

./: CMakeLists.txt  Main.cpp  README.md  Shoppingheader.h  cart.cpp  catalogue.cpp  customer_managment.cpp  data.txt  player_management.cpp  test.cpp  test.h  test.ui.autosave
